# MentalBlackboard

./: PFHP_Back_Prediction_Data.json  PFHP_Generalization_Data.json  PFHP_Planning_Data.json  PFHP_Prediction_Data.json  README.md  __init__.py  animate.py  eval_prediction.py  img_text_map.py  inference_MentalBlackboard_planning.py  planning_converter.py  planning_scoring.py  prediction_scoring.py  prompts_builder.py  pyproject.toml  run.py  run_MentalBlackboard_planning.py  run_MentalBlackboard_prediction.py  validation.py
data/: PFHP_Back_Prediction_Data.json  PFHP_Generalization_Data.json  PFHP_Planning_Data.json
open_source_evals/: eval_backward_prediction.py  eval_generalization_2D.py  eval_planning_2D.py  eval_prediction_2D.py  eval_prediction_video.py
scoring/: backward_scoring.py  generalization_scoring.py  prediction_scoring.py  text_prediction_scoring.py
